--- a/src/SentimentAnalysis.ipynb
+++ b/src/SentimentAnalysis.ipynb
@@ -4177,27 +4177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Dataset :: namedtuple(\n",
-      "  'info': pandas.df\n",
-      "  'book_sentiment_words_list': ['filename']\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas, os\n",
     "import data, config\n",
@@ -4206,7 +4188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5223,7 +5205,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Choose to most important to be kept in the feature-vector"
+    "# (oud)\n",
+    "Choose to most important to be kept in the feature-vector"
    ]
   },
   {
@@ -5262,15 +5245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = tfidf.create_index(directory, book_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "index = tfidf.create_index(directory, book_list)\n",
     "tf_matrix = tfidf.create_tf_matrix(directory, book_list)"
    ]
   },
