--- a/src/side-info.ipynb
+++ b/src/side-info.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "filename = config.dataset_dir + '/output/bookdata_alt.csv'\n",
     "info = pd.read_csv(filename)\n",
-    "info.index = info['title']\n"
+    "info.index = info['title']"
    ]
   },
   {
@@ -32831,15 +32831,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sdf_df'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO string.strip\n",
+    "import sparql\n",
     "string = \"sdf ' df\"\n",
-    "string = string.strip('\"`')\n",
-    "string = string.strip(\"'\")\n",
-    "string"
+    "# string = string.strip('\"')\n",
+    "# string = string.strip(\"'\")\n",
+    "sparql.sanitize(string)"
    ]
   },
   {
@@ -32913,7 +32925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
