--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -6,7 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas, os"
+    "import pandas, os, numpy as np\n",
+    "import os, sklearn, pandas, numpy as np\n",
+    "from sklearn import svm\n",
+    "import skimage\n",
+    "from skimage import io, filters\n",
+    "from utils import utils # custom functions, in local environment\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -20,7 +27,24 @@
      "text": [
       "Using TensorFlow backend.\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "## NN libs\n",
+    "import keras\n",
+    "from sklearn.decomposition import PCA\n",
+    "from keras.utils import to_categorical\n",
+    "from keras.layers import Dense, Activation\n",
+    "from keras.optimizers import SGD, Adam\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Activation, Conv2D, Conv3D, MaxPool2D, Dropout, Flatten"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -47,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +83,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1374,7 @@
        "[958 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1361,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1394,7 @@
        "'Novella'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1415,7 @@
        "'Christian fiction'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1410,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1430,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1472,7 @@
        " 'Adventure novel']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,22 +1492,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0., 0., 0., ..., 0., 0., 1.],\n",
+       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 1., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 1.],\n",
        "       ...,\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1504,16 +1528,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.        , 0.        , 0.57735027])"
+       "array([0.57735027, 0.        , 0.        ])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1542,23 +1566,20 @@
        "array([0.05957593, 0.04597156, 0.66307096, 0.02651661])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "data.polarization_scores_to_vector(dataset)"
+    "data.polarization_scores_to_vector(dataset,'706.txt')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# row = dataset.info.loc[dataset.info['filename'] == '706.txt']"
+    "### Using NER scores"
    ]
   },
   {
@@ -1567,65 +1588,259 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataset.book_sentiment_words_list"
+    "# ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train a model\n",
+    "Although most of the input consists of classes, many classes will be correlated (e.g. related genres).\n",
+    "Therefore a neural network is chosen to model the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO\n",
-    "def to_sentiment_vector(data):\n",
-    "    # data :: {'pos score', 'neg score', 'neu score', 'comp score', 'amt pos','amt neg}\n",
-    "    return list(data.items())"
+    "def to_vector(x_train, dataset):\n",
+    "    x2 = []\n",
+    "    for filename, tokens in x_train:\n",
+    "        v1 = data.tokenlist_to_vector(tokens, dataset.sentiment_dataset)\n",
+    "        v2 = data.polarization_scores_to_vector(dataset, filename)\n",
+    "        v = np.append(v1, v2)\n",
+    "        x2.append(v)\n",
+    "    return np.stack(x2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = ['a','b','f']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-17-2c42b7b52b11>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-2c42b7b52b11>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def to_word_vector(word_list,import)\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "data": {
+      "text/plain": [
+       "(10, 7)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train2 = to_vector(x_train, dataset)\n",
+    "x_train2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 (7,)\n",
+      "output length 158\n"
      ]
     }
    ],
    "source": [
-    "def to_word_vector(word_list,import)"
+    "n_samples = len(x_train2) # = length of the list of images (matrices)\n",
+    "input_shape = x_train2.shape[1:] # = shape of an individual image (matrix)\n",
+    "output_length = (y_train[0]).shape[0] # = length of an individual label\n",
+    "print(n_samples, input_shape)\n",
+    "print('output length', output_length)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.dict_label_to_index(important_words)"
+    "def sequential(input_shape, output_length):\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(128, input_shape=input_shape))\n",
+    "    model.add(Activation('relu'))  # because relu is awesome\n",
+    "    model.add(Dense(output_length))\n",
+    "    model.add(Activation('softmax'))\n",
+    "    # in addition, return a function that displays information about the model\n",
+    "    return model, model.summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_3 (Dense)              (None, 128)               1024      \n",
+      "_________________________________________________________________\n",
+      "activation_3 (Activation)    (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 158)               20382     \n",
+      "_________________________________________________________________\n",
+      "activation_4 (Activation)    (None, 158)               0         \n",
+      "=================================================================\n",
+      "Total params: 21,406\n",
+      "Trainable params: 21,406\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import models # src/models.py\n",
+    "\n",
+    "model, summary = sequential(input_shape, output_length)\n",
+    "summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loss function\n",
+    "- Categorical cross-entropy loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub_dataset = dataset.sentiment_dataset\n",
-    "y_train, y_test = data.labels_to_vectors(sub_dataset, y_train, y_test)"
+    "learning_rate = 0.01\n",
+    "optimizer = Adam(lr=learning_rate)\n",
+    "model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finally train the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute a batch size\n",
+    "batch_size = round(n_samples / 10)\n",
+    "# n epochs = n iterations over all the training data\n",
+    "epochs = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 8 samples, validate on 2 samples\n",
+      "Epoch 1/5\n",
+      "8/8 [==============================] - 0s 57ms/step - loss: 5.0421 - acc: 0.0000e+00 - val_loss: 4.8717 - val_acc: 0.0000e+00\n",
+      "Epoch 2/5\n",
+      "8/8 [==============================] - 0s 2ms/step - loss: 4.1552 - acc: 0.1250 - val_loss: 4.3556 - val_acc: 0.0000e+00\n",
+      "Epoch 3/5\n",
+      "8/8 [==============================] - 0s 3ms/step - loss: 2.8459 - acc: 0.1250 - val_loss: 4.4335 - val_acc: 0.0000e+00\n",
+      "Epoch 4/5\n",
+      "8/8 [==============================] - 0s 2ms/step - loss: 2.1163 - acc: 0.1250 - val_loss: 5.5491 - val_acc: 0.0000e+00\n",
+      "Epoch 5/5\n",
+      "8/8 [==============================] - 0s 2ms/step - loss: 2.0267 - acc: 0.2500 - val_loss: 6.1588 - val_acc: 0.5000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x126abf6d8>"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x_train2, y_train, epochs=epochs, batch_size=batch_size, validation_split=1/5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       ...,\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_known_data = model.predict(x_train2)\n",
+    "result_known_data == y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.8631421e-05, 2.3759421e-05, 1.9479583e-05, ..., 1.8151064e-05,\n",
+       "        2.3767081e-05, 6.9395676e-02],\n",
+       "       [2.3281935e-05, 2.9353312e-05, 2.4164980e-05, ..., 2.2704815e-05,\n",
+       "        2.9492827e-05, 7.0404150e-02],\n",
+       "       [3.2635868e-05, 4.0770607e-05, 3.4019729e-05, ..., 3.1939140e-05,\n",
+       "        4.0833176e-05, 7.2843209e-02],\n",
+       "       ...,\n",
+       "       [2.9167664e-05, 3.6507561e-05, 3.0199690e-05, ..., 2.8357514e-05,\n",
+       "        3.6741229e-05, 7.1583681e-02],\n",
+       "       [1.3587793e-05, 1.7434430e-05, 1.4107607e-05, ..., 1.3219166e-05,\n",
+       "        1.7522842e-05, 6.7066565e-02],\n",
+       "       [3.0514009e-05, 3.8215148e-05, 3.1803043e-05, ..., 2.9817957e-05,\n",
+       "        3.8283291e-05, 7.2381467e-02]], dtype=float32)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_known_data"
    ]
   },
   {
@@ -1640,9 +1855,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dataset.labels"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
