add conversion y to label

--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -1500,10 +1500,10 @@
       "text/plain": [
        "array([[0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 1.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       ...,\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 1.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1618,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1627,7 @@
        "(10, 7)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
      "output_type": "stream",
      "text": [
       "10 (7,)\n",
-      "output length 158\n"
+      "output length 160\n"
      ]
     }
    ],
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1687,16 +1687,16 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_3 (Dense)              (None, 128)               1024      \n",
+      "dense_1 (Dense)              (None, 128)               1024      \n",
       "_________________________________________________________________\n",
-      "activation_3 (Activation)    (None, 128)               0         \n",
+      "activation_1 (Activation)    (None, 128)               0         \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 158)               20382     \n",
+      "dense_2 (Dense)              (None, 160)               20640     \n",
       "_________________________________________________________________\n",
-      "activation_4 (Activation)    (None, 158)               0         \n",
+      "activation_2 (Activation)    (None, 160)               0         \n",
       "=================================================================\n",
-      "Total params: 21,406\n",
-      "Trainable params: 21,406\n",
+      "Total params: 21,664\n",
+      "Trainable params: 21,664\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -1719,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1749,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1758,24 +1758,24 @@
      "text": [
       "Train on 8 samples, validate on 2 samples\n",
       "Epoch 1/5\n",
-      "8/8 [==============================] - 0s 57ms/step - loss: 5.0421 - acc: 0.0000e+00 - val_loss: 4.8717 - val_acc: 0.0000e+00\n",
+      "8/8 [==============================] - 0s 41ms/step - loss: 5.0066 - acc: 0.0000e+00 - val_loss: 4.8672 - val_acc: 0.0000e+00\n",
       "Epoch 2/5\n",
-      "8/8 [==============================] - 0s 2ms/step - loss: 4.1552 - acc: 0.1250 - val_loss: 4.3556 - val_acc: 0.0000e+00\n",
+      "8/8 [==============================] - 0s 2ms/step - loss: 4.1990 - acc: 0.0000e+00 - val_loss: 4.3204 - val_acc: 0.5000\n",
       "Epoch 3/5\n",
-      "8/8 [==============================] - 0s 3ms/step - loss: 2.8459 - acc: 0.1250 - val_loss: 4.4335 - val_acc: 0.0000e+00\n",
+      "8/8 [==============================] - 0s 3ms/step - loss: 2.8591 - acc: 0.2500 - val_loss: 4.3048 - val_acc: 0.5000\n",
       "Epoch 4/5\n",
-      "8/8 [==============================] - 0s 2ms/step - loss: 2.1163 - acc: 0.1250 - val_loss: 5.5491 - val_acc: 0.0000e+00\n",
+      "8/8 [==============================] - 0s 3ms/step - loss: 2.1900 - acc: 0.2500 - val_loss: 5.2764 - val_acc: 0.5000\n",
       "Epoch 5/5\n",
-      "8/8 [==============================] - 0s 2ms/step - loss: 2.0267 - acc: 0.2500 - val_loss: 6.1588 - val_acc: 0.5000\n"
+      "8/8 [==============================] - 0s 2ms/step - loss: 2.0172 - acc: 0.2500 - val_loss: 6.0083 - val_acc: 0.5000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x126abf6d8>"
+       "<keras.callbacks.History at 0x124c15cc0>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1786,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
        "       [False, False, False, ..., False, False, False]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1813,35 +1813,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.8631421e-05, 2.3759421e-05, 1.9479583e-05, ..., 1.8151064e-05,\n",
-       "        2.3767081e-05, 6.9395676e-02],\n",
-       "       [2.3281935e-05, 2.9353312e-05, 2.4164980e-05, ..., 2.2704815e-05,\n",
-       "        2.9492827e-05, 7.0404150e-02],\n",
-       "       [3.2635868e-05, 4.0770607e-05, 3.4019729e-05, ..., 3.1939140e-05,\n",
-       "        4.0833176e-05, 7.2843209e-02],\n",
-       "       ...,\n",
-       "       [2.9167664e-05, 3.6507561e-05, 3.0199690e-05, ..., 2.8357514e-05,\n",
-       "        3.6741229e-05, 7.1583681e-02],\n",
-       "       [1.3587793e-05, 1.7434430e-05, 1.4107607e-05, ..., 1.3219166e-05,\n",
-       "        1.7522842e-05, 6.7066565e-02],\n",
-       "       [3.0514009e-05, 3.8215148e-05, 3.1803043e-05, ..., 2.9817957e-05,\n",
-       "        3.8283291e-05, 7.2381467e-02]], dtype=float32)"
+       "0.31238028"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result_known_data"
+    "i = result_known_data[0].argmax()\n",
+    "result_known_data[0][i]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Adventure': 2.4588879e-05,\n",
+       " 'Adventure fiction': 2.4743289e-05,\n",
+       " 'Adventure novel': 0.31238028,\n",
+       " 'Alternate history': 2.5771187e-05,\n",
+       " 'Apocalyptic fiction': 2.430422e-05,\n",
+       " 'Autobiographical novel': 2.7511913e-05,\n",
+       " 'Autobiography': 2.2867504e-05,\n",
+       " 'Bildungsroman': 2.8575496e-05,\n",
+       " 'Biographical novel': 2.0633905e-05,\n",
+       " 'Biography': 2.4755185e-05,\n",
+       " 'Biography in literature': 3.0023815e-05,\n",
+       " 'Black comedy': 3.3985867e-05,\n",
+       " 'Bush poetry': 3.5501816e-05,\n",
+       " 'Canadian literature': 3.439199e-05,\n",
+       " 'Captivity narrative': 3.3893746e-05,\n",
+       " \"Children's Literature\": 2.8283064e-05,\n",
+       " \"Children's book\": 2.555966e-05,\n",
+       " \"Children's books\": 2.7139395e-05,\n",
+       " \"Children's fiction\": 2.7123557e-05,\n",
+       " \"Children's literature\": 2.664342e-05,\n",
+       " \"Children's novel\": 2.3857057e-05,\n",
+       " 'Chivalric romance': 3.745061e-05,\n",
+       " 'Christian Apologetics': 3.0988278e-05,\n",
+       " 'Christian fiction': 0.16041695,\n",
+       " 'Christian literature': 3.2174008e-05,\n",
+       " 'Christian mysticism': 3.2218562e-05,\n",
+       " 'Christian mythology': 2.3364002e-05,\n",
+       " 'Christian novel': 2.2807153e-05,\n",
+       " 'Comedy': 2.9159028e-05,\n",
+       " 'Comedy novel': 2.7169459e-05,\n",
+       " 'Comic novel': 0.13478318,\n",
+       " 'Contemporary romance': 2.44626e-05,\n",
+       " 'Cookbook': 3.0397288e-05,\n",
+       " 'Crime fiction': 2.9426736e-05,\n",
+       " 'Crime novel': 3.3359047e-05,\n",
+       " 'Cryptozoology': 2.0222791e-05,\n",
+       " 'Cultural criticism': 3.2701846e-05,\n",
+       " 'Dark fantasy': 2.4089246e-05,\n",
+       " 'Decadent movement': 2.5374691e-05,\n",
+       " 'Detective fiction': 3.30125e-05,\n",
+       " 'Detective novel': 4.2382828e-05,\n",
+       " 'Detective stories': 2.6566948e-05,\n",
+       " 'Diary and Novel': 2.2112155e-05,\n",
+       " 'Drama': 2.569506e-05,\n",
+       " 'Dystopian': 2.1738551e-05,\n",
+       " 'Economics': 4.122924e-05,\n",
+       " 'Encyclopedia': 2.5305695e-05,\n",
+       " 'Epistolary novel': 2.1166135e-05,\n",
+       " 'Essay': 2.0946653e-05,\n",
+       " 'Fairy tale': 3.1322415e-05,\n",
+       " 'Fairytale fantasy': 2.8598997e-05,\n",
+       " 'Family saga': 2.5216896e-05,\n",
+       " 'Fantasy': 2.003633e-05,\n",
+       " 'Fantasy fiction': 3.342541e-05,\n",
+       " 'Fantasy literature': 3.6240406e-05,\n",
+       " 'Fantasy novel': 0.08915056,\n",
+       " 'Fantasy/Ethnic novel': 2.8073699e-05,\n",
+       " 'Feminist science fiction': 2.5777012e-05,\n",
+       " 'Fiction': 3.7856345e-05,\n",
+       " 'Folklore': 3.583432e-05,\n",
+       " 'Frame story': 3.1820255e-05,\n",
+       " 'Gaucho literature': 2.8468869e-05,\n",
+       " 'Gothic fiction': 3.707899e-05,\n",
+       " 'Gothic novel': 3.2373857e-05,\n",
+       " 'Hindi': 3.092348e-05,\n",
+       " 'Historical': 3.3603053e-05,\n",
+       " 'Historical Fiction': 2.4056693e-05,\n",
+       " 'Historical Novel': 3.6069316e-05,\n",
+       " 'Historical fiction': 3.3666758e-05,\n",
+       " 'Historical mystery': 3.261685e-05,\n",
+       " 'Historical novel': 2.6368447e-05,\n",
+       " 'Historical novels': 2.743072e-05,\n",
+       " 'History': 2.2779417e-05,\n",
+       " 'History of Ideas': 3.5028996e-05,\n",
+       " 'Horror fiction': 2.4958883e-05,\n",
+       " 'Horror novel': 3.6906156e-05,\n",
+       " 'Humor': 3.3882177e-05,\n",
+       " 'Interior design': 2.8122173e-05,\n",
+       " 'Künstlerroman': 0.1058777,\n",
+       " 'Legal thriller': 2.65943e-05,\n",
+       " 'Literary realism': 2.743399e-05,\n",
+       " 'Lost World (genre)': 3.6385405e-05,\n",
+       " 'Military history': 3.145146e-05,\n",
+       " 'Military science fiction': 2.3885079e-05,\n",
+       " 'Monograph': 2.0474501e-05,\n",
+       " 'Mystery (fiction)': 2.708773e-05,\n",
+       " 'Mystery fiction': 2.6704982e-05,\n",
+       " 'Mystery novel': 3.307404e-05,\n",
+       " 'Nature writing': 3.831749e-05,\n",
+       " 'Non-Fiction': 3.1492396e-05,\n",
+       " 'Non-Profit': 2.7321903e-05,\n",
+       " 'Non-fiction': 2.6475793e-05,\n",
+       " 'Nonfiction': 2.3226374e-05,\n",
+       " 'Nonsense poetry': 3.0512767e-05,\n",
+       " 'Novel': 3.072529e-05,\n",
+       " 'Novel of manners': 2.7360233e-05,\n",
+       " 'Novella': 2.8471855e-05,\n",
+       " 'Philosophical fiction': 3.690387e-05,\n",
+       " 'Philosophical literature': 2.0892665e-05,\n",
+       " 'Philosophical novel': 2.2841588e-05,\n",
+       " 'Philosophy': 3.0593215e-05,\n",
+       " 'Photography': 2.1217327e-05,\n",
+       " 'Picture book': 2.7543178e-05,\n",
+       " 'Poem': 3.4192304e-05,\n",
+       " 'Poetry': 2.4001878e-05,\n",
+       " 'Political': 3.192969e-05,\n",
+       " 'Political journalism': 3.7269685e-05,\n",
+       " 'Political novel': 3.0480745e-05,\n",
+       " 'Political philosophy': 2.8427496e-05,\n",
+       " 'Political thriller': 2.1777063e-05,\n",
+       " 'Prose poetry': 2.7234131e-05,\n",
+       " 'Psychological Thriller': 2.9018964e-05,\n",
+       " 'Psychological novel': 2.4193494e-05,\n",
+       " 'Reference work': 2.9322693e-05,\n",
+       " 'Roman à clef': 2.8384826e-05,\n",
+       " 'Romance novel': 3.301508e-05,\n",
+       " 'Romantic novel': 2.8255403e-05,\n",
+       " 'Romanticism': 3.057195e-05,\n",
+       " 'Ruritanian romance': 2.9470715e-05,\n",
+       " 'Satire': 3.1064497e-05,\n",
+       " 'Satirical': 2.97894e-05,\n",
+       " 'Science Fantasy': 3.4342727e-05,\n",
+       " 'Science fantasy': 2.6000675e-05,\n",
+       " 'Science fiction': 3.1712585e-05,\n",
+       " 'Science fiction fandom': 2.5536077e-05,\n",
+       " 'Self-help': 2.5067877e-05,\n",
+       " 'Sensation novel': 2.6205249e-05,\n",
+       " 'Short stories': 3.241352e-05,\n",
+       " 'Short story': 3.8831255e-05,\n",
+       " 'Short story cycle': 3.823394e-05,\n",
+       " 'Sketch story': 3.2306467e-05,\n",
+       " 'Slave narrative': 3.5616744e-05,\n",
+       " 'Social commentary': 3.217588e-05,\n",
+       " 'Spiritual autobiography': 2.8132472e-05,\n",
+       " 'Spy novel': 3.1927768e-05,\n",
+       " 'Sword and sorcery': 2.7602922e-05,\n",
+       " 'Syair': 3.158853e-05,\n",
+       " 'Temperance movement': 3.63424e-05,\n",
+       " 'Thriller (genre)': 3.9983013e-05,\n",
+       " 'Thriller fiction': 3.5923145e-05,\n",
+       " 'Thriller novel': 4.3759406e-05,\n",
+       " 'Tragedy': 3.2681364e-05,\n",
+       " 'Tragicomedy': 2.9733998e-05,\n",
+       " 'Travel literature': 0.09909499,\n",
+       " 'Travel writing': 3.863227e-05,\n",
+       " 'Utopian and dystopian fiction': 3.170569e-05,\n",
+       " 'Utopian fiction': 4.311049e-05,\n",
+       " 'Utopian novel': 3.246847e-05,\n",
+       " 'Verse novel': 2.9070427e-05,\n",
+       " 'Western (genre)': 3.440649e-05,\n",
+       " 'Western fiction': 2.5909532e-05,\n",
+       " 'Western novel': 0.0937692,\n",
+       " 'World War II': 3.0669897e-05,\n",
+       " 'Wuxia': 2.3742616e-05,\n",
+       " 'Young adult fiction': 2.9958232e-05,\n",
+       " 'Young adult novel': 2.6203623e-05,\n",
+       " 'Young adult novels': 3.4616638e-05,\n",
+       " 'Young-Adult Fiction': 2.1138076e-05,\n",
+       " 'Young-adult fiction': 2.6415566e-05,\n",
+       " 'unknown': 3.3488075e-05}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.y_to_label_dict(dataset,result_known_data[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
