add genre-reduction function

--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -2016,7 +2016,141 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def y\n",
+    "result = {}  # :: {label: score}\n",
+    "    for i in range(n):\n",
+    "        label = dataset.label_dataset.dict_index_to_label[i]\n",
+    "        result[label] = vector[i]\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk, re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'children literatur'"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title =\"Childrens Literature\"\n",
+    "\n",
+    "def replace_special_chars(string, char=''):\n",
+    "    return re.sub('[^A-Z a-z0-9]+', char, string)\n",
+    "\n",
+    "def concat(ls):\n",
+    "    result = ls[0]\n",
+    "    for char in ls[1:]:\n",
+    "        result += char\n",
+    "    return result\n",
+    "\n",
+    "def intersperse(ls, a=' '):\n",
+    "    result = ls[0]\n",
+    "    for char in ls[1:]:\n",
+    "        result += a + char\n",
+    "    return result\n",
+    "\n",
+    "def normalize_string(string):\n",
+    "    s = replace_special_chars(string, char='').lower()\n",
+    "    porter = nltk.PorterStemmer()\n",
+    "    s_ = [porter.stem(t) for t in nltk.word_tokenize(s)]\n",
+    "    return intersperse(s_)\n",
+    "\n",
+    "normalize_string(title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "173"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset.genres)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "160"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = set([ normalize_string(g) for g in dataset.genres])\n",
+    "len(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Childrens', 'Literature']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.word_tokenize(title)"
+   ]
   },
   {
    "cell_type": "code",
@@ -2038,6 +2172,69 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['children', 'literatur']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens = nltk.word_tokenize(title)\n",
+    "porter = nltk.PorterStemmer()\n",
+    "lancaster = nltk.LancasterStemmer()\n",
+    "[porter.stem(t) for t in tokens]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['childr', 'lit']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[lancaster.stem(t) for t in tokens]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['childr', 'lit']"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[lancaster.stem(t) for t in ['childrens','literature']]"
+   ]
   },
   {
    "cell_type": "code",
