add genre reduction

--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -2127,10 +2127,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'adventur',\n",
+       " 'adventur fiction',\n",
+       " 'adventur novel',\n",
+       " 'altern histori',\n",
+       " 'apocalypt and postapocalypt fiction',\n",
+       " 'apocalypt fiction',\n",
+       " 'autobiograph novel',\n",
+       " 'autobiographi',\n",
+       " 'bildungsroman',\n",
+       " 'biograph novel',\n",
+       " 'biographi',\n",
+       " 'biographi in literatur',\n",
+       " 'black comedi',\n",
+       " 'bush poetri',\n",
+       " 'busi',\n",
+       " 'canadian literatur',\n",
+       " 'captiv narr',\n",
+       " 'children book',\n",
+       " 'children fiction',\n",
+       " 'children literatur',\n",
+       " 'children novel',\n",
+       " 'chivalr romanc',\n",
+       " 'christian apologet',\n",
+       " 'christian fiction',\n",
+       " 'christian literatur',\n",
+       " 'christian mystic',\n",
+       " 'christian mytholog',\n",
+       " 'christian novel',\n",
+       " 'comedi',\n",
+       " 'comedi novel',\n",
+       " 'comic novel',\n",
+       " 'contemporari romanc',\n",
+       " 'cookbook',\n",
+       " 'crime fiction',\n",
+       " 'crime novel',\n",
+       " 'cryptozoolog',\n",
+       " 'cultur critic',\n",
+       " 'dark fantasi',\n",
+       " 'decad movement',\n",
+       " 'detect fiction',\n",
+       " 'detect novel',\n",
+       " 'detect stori',\n",
+       " 'diari and novel',\n",
+       " 'drama',\n",
+       " 'dystopian',\n",
+       " 'dystopian novel',\n",
+       " 'econom',\n",
+       " 'encyclopedia',\n",
+       " 'epistolari novel',\n",
+       " 'essay',\n",
+       " 'fairi tale',\n",
+       " 'fairytal fantasi',\n",
+       " 'famili saga',\n",
+       " 'fantasi',\n",
+       " 'fantasi fiction',\n",
+       " 'fantasi literatur',\n",
+       " 'fantasi novel',\n",
+       " 'fantasyethn novel',\n",
+       " 'feminist scienc fiction',\n",
+       " 'fiction',\n",
+       " 'folklor',\n",
+       " 'frame stori',\n",
+       " 'gaucho literatur',\n",
+       " 'gothic fiction',\n",
+       " 'gothic novel',\n",
+       " 'hindi',\n",
+       " 'histor',\n",
+       " 'histor fantasi',\n",
+       " 'histor fiction',\n",
+       " 'histor mysteri',\n",
+       " 'histor novel',\n",
+       " 'histori',\n",
+       " 'histori of idea',\n",
+       " 'horror fiction',\n",
+       " 'horror novel',\n",
+       " 'humor',\n",
+       " 'interior design',\n",
+       " 'juvenil literatur',\n",
+       " 'knstlerroman',\n",
+       " 'legal thriller',\n",
+       " 'literari realism',\n",
+       " 'lost world genr',\n",
+       " 'memoir',\n",
+       " 'militari histori',\n",
+       " 'militari scienc fiction',\n",
+       " 'monograph',\n",
+       " 'mysteri fiction',\n",
+       " 'mysteri novel',\n",
+       " 'natur write',\n",
+       " 'nonfict',\n",
+       " 'nonprofit',\n",
+       " 'nonsens poetri',\n",
+       " 'novel',\n",
+       " 'novel of manner',\n",
+       " 'novella',\n",
+       " 'philosoph fiction',\n",
+       " 'philosoph literatur',\n",
+       " 'philosoph novel',\n",
+       " 'philosophi',\n",
+       " 'photographi',\n",
+       " 'pictur book',\n",
+       " 'planetari romanc',\n",
+       " 'poem',\n",
+       " 'poetri',\n",
+       " 'polit',\n",
+       " 'polit journal',\n",
+       " 'polit novel',\n",
+       " 'polit philosophi',\n",
+       " 'polit thriller',\n",
+       " 'prose poetri',\n",
+       " 'psycholog novel',\n",
+       " 'psycholog thriller',\n",
+       " 'refer work',\n",
+       " 'roman clef',\n",
+       " 'romanc novel',\n",
+       " 'romant novel',\n",
+       " 'romantic',\n",
+       " 'ruritanian romanc',\n",
+       " 'satir',\n",
+       " 'scienc',\n",
+       " 'scienc fantasi',\n",
+       " 'scienc fiction',\n",
+       " 'scienc fiction fandom',\n",
+       " 'selfhelp',\n",
+       " 'sensat novel',\n",
+       " 'short stori',\n",
+       " 'short stori cycl',\n",
+       " 'sketch stori',\n",
+       " 'slave narr',\n",
+       " 'social commentari',\n",
+       " 'spi novel',\n",
+       " 'spiritu autobiographi',\n",
+       " 'sword and sorceri',\n",
+       " 'syair',\n",
+       " 'temper movement',\n",
+       " 'textbook',\n",
+       " 'theodici',\n",
+       " 'thriller fiction',\n",
+       " 'thriller genr',\n",
+       " 'thriller novel',\n",
+       " 'tragedi',\n",
+       " 'tragicomedi',\n",
+       " 'travel literatur',\n",
+       " 'travel write',\n",
+       " 'unknown',\n",
+       " 'utopian and dystopian fiction',\n",
+       " 'utopian fiction',\n",
+       " 'utopian novel',\n",
+       " 'vers novel',\n",
+       " 'victorian literatur',\n",
+       " 'war',\n",
+       " 'war novel',\n",
+       " 'western fiction',\n",
+       " 'western genr',\n",
+       " 'western novel',\n",
+       " 'world war ii',\n",
+       " 'wuxia',\n",
+       " 'young adult fiction',\n",
+       " 'young adult novel',\n",
+       " 'youngadult fiction'}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g"
+   ]
   },
   {
    "cell_type": "code",
@@ -2154,17 +2326,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Adventure',\n",
+       " 'Adventure fiction',\n",
+       " 'Adventure novel',\n",
+       " 'Alternate history',\n",
+       " 'Apocalyptic and post-apocalyptic fiction',\n",
+       " 'Apocalyptic fiction',\n",
+       " 'Autobiographical novel',\n",
+       " 'Autobiography',\n",
+       " 'Bildungsroman',\n",
+       " 'Biographical novel',\n",
+       " 'Biography',\n",
+       " 'Biography in literature',\n",
+       " 'Black comedy',\n",
+       " 'Bush poetry',\n",
+       " 'Business',\n",
+       " 'Canadian literature',\n",
+       " 'Captivity narrative',\n",
+       " \"Children's Literature\",\n",
+       " \"Children's book\",\n",
+       " \"Children's books\",\n",
+       " \"Children's fiction\",\n",
+       " \"Children's literature\",\n",
+       " \"Children's novel\",\n",
+       " 'Chivalric romance',\n",
+       " 'Christian Apologetics',\n",
+       " 'Christian fiction',\n",
+       " 'Christian literature',\n",
+       " 'Christian mysticism',\n",
+       " 'Christian mythology',\n",
+       " 'Christian novel',\n",
+       " 'Comedy',\n",
+       " 'Comedy novel',\n",
+       " 'Comic novel',\n",
+       " 'Contemporary romance',\n",
+       " 'Cookbook',\n",
+       " 'Crime fiction',\n",
+       " 'Crime novel',\n",
+       " 'Cryptozoology',\n",
+       " 'Cultural criticism',\n",
+       " 'Dark fantasy',\n",
+       " 'Decadent movement',\n",
+       " 'Detective fiction',\n",
+       " 'Detective novel',\n",
+       " 'Detective stories',\n",
+       " 'Diary and Novel',\n",
+       " 'Drama',\n",
+       " 'Dystopian',\n",
+       " 'Dystopian novel',\n",
+       " 'Economics',\n",
+       " 'Encyclopedia',\n",
+       " 'Epistolary novel',\n",
+       " 'Essay',\n",
+       " 'Fairy tale',\n",
+       " 'Fairytale fantasy',\n",
+       " 'Family saga',\n",
+       " 'Fantasy',\n",
+       " 'Fantasy fiction',\n",
+       " 'Fantasy literature',\n",
+       " 'Fantasy novel',\n",
+       " 'Fantasy/Ethnic novel',\n",
+       " 'Feminist science fiction',\n",
+       " 'Fiction',\n",
+       " 'Folklore',\n",
+       " 'Frame story',\n",
+       " 'Gaucho literature',\n",
+       " 'Gothic fiction',\n",
+       " 'Gothic novel',\n",
+       " 'Hindi',\n",
+       " 'Historical',\n",
+       " 'Historical Fiction',\n",
+       " 'Historical Novel',\n",
+       " 'Historical fantasy',\n",
+       " 'Historical fiction',\n",
+       " 'Historical mystery',\n",
+       " 'Historical novel',\n",
+       " 'Historical novels',\n",
+       " 'History',\n",
+       " 'History of Ideas',\n",
+       " 'Horror fiction',\n",
+       " 'Horror novel',\n",
+       " 'Humor',\n",
+       " 'Interior design',\n",
+       " 'Juvenile literature',\n",
+       " 'Künstlerroman',\n",
+       " 'Legal thriller',\n",
+       " 'Literary realism',\n",
+       " 'Lost World (genre)',\n",
+       " 'Memoir',\n",
+       " 'Military history',\n",
+       " 'Military science fiction',\n",
+       " 'Monograph',\n",
+       " 'Mystery (fiction)',\n",
+       " 'Mystery fiction',\n",
+       " 'Mystery novel',\n",
+       " 'Nature writing',\n",
+       " 'Non-Fiction',\n",
+       " 'Non-Profit',\n",
+       " 'Non-fiction',\n",
+       " 'Nonfiction',\n",
+       " 'Nonsense poetry',\n",
+       " 'Novel',\n",
+       " 'Novel of manners',\n",
+       " 'Novella',\n",
+       " 'Philosophical fiction',\n",
+       " 'Philosophical literature',\n",
+       " 'Philosophical novel',\n",
+       " 'Philosophy',\n",
+       " 'Photography',\n",
+       " 'Picture book',\n",
+       " 'Planetary romance',\n",
+       " 'Poem',\n",
+       " 'Poetry',\n",
+       " 'Political',\n",
+       " 'Political journalism',\n",
+       " 'Political novel',\n",
+       " 'Political philosophy',\n",
+       " 'Political thriller',\n",
+       " 'Prose poetry',\n",
+       " 'Psychological Thriller',\n",
+       " 'Psychological novel',\n",
+       " 'Reference work',\n",
+       " 'Roman à clef',\n",
+       " 'Romance novel',\n",
+       " 'Romantic novel',\n",
+       " 'Romanticism',\n",
+       " 'Ruritanian romance',\n",
+       " 'Satire',\n",
+       " 'Satirical',\n",
+       " 'Science',\n",
+       " 'Science Fantasy',\n",
+       " 'Science fantasy',\n",
+       " 'Science fiction',\n",
+       " 'Science fiction fandom',\n",
+       " 'Self-help',\n",
+       " 'Sensation novel',\n",
+       " 'Short stories',\n",
+       " 'Short story',\n",
+       " 'Short story cycle',\n",
+       " 'Sketch story',\n",
+       " 'Slave narrative',\n",
+       " 'Social commentary',\n",
+       " 'Spiritual autobiography',\n",
+       " 'Spy novel',\n",
+       " 'Sword and sorcery',\n",
+       " 'Syair',\n",
+       " 'Temperance movement',\n",
+       " 'Textbook',\n",
+       " 'Theodicy',\n",
+       " 'Thriller (genre)',\n",
+       " 'Thriller fiction',\n",
+       " 'Thriller novel',\n",
+       " 'Tragedy',\n",
+       " 'Tragicomedy',\n",
+       " 'Travel literature',\n",
+       " 'Travel writing',\n",
+       " 'Utopian and dystopian fiction',\n",
+       " 'Utopian fiction',\n",
+       " 'Utopian novel',\n",
+       " 'Verse novel',\n",
+       " 'Victorian literature',\n",
+       " 'War',\n",
+       " 'War novel',\n",
+       " 'Western (genre)',\n",
+       " 'Western fiction',\n",
+       " 'Western novel',\n",
+       " 'World War II',\n",
+       " 'Wuxia',\n",
+       " 'Young adult fiction',\n",
+       " 'Young adult novel',\n",
+       " 'Young adult novels',\n",
+       " 'Young-Adult Fiction',\n",
+       " 'Young-adult fiction',\n",
+       " 'unknown'}"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(dataset.genres)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1,2,3][:-1]"
+   ]
   },
   {
    "cell_type": "code",
@@ -2234,6 +2604,62 @@
    ],
    "source": [
     "[lancaster.stem(t) for t in ['childrens','literature']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Dataset :: namedtuple(\n",
+      "  'info': pandas.df\n",
+      "  'labels': pandas.df('filename.txt': 'genre')\n",
+      "  'genres': ['genre'] # unique genres\n",
+      "  'label_dataset': SubDataset\n",
+      "  'sentiment_dataset': SubDataset\n",
+      "  'book_sentiment_words_list': ['filename']\n",
+      "\n",
+      " SubDataset :: namedtuple(\n",
+      "   'dict_index_to_label' = dict to convert label_index -> label_name\n",
+      "   'dict_label_to_index'= dict to convert label_name -> label_index\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import data\n",
+    "dataset = data.init_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "119"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data.reduce_genres(dataset.genres))"
    ]
   },
   {
